--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
 	
 	
 	<script type="text/javascript"
-	src="https://maps.googleapis.com/maps/api/js?key=AIzaSyChbqdw1gU-hpEvqKLORMf79jSZ15DM-bM&libraries=places">
+	src="https://maps.googleapis.com/maps/api/js?key=AIzaSyChbqdw1gU-hpEvqKLORMf79jSZ15DM-bM&libraries=places,geometry">
 	</script>
 	
 	
