--- a/app/views/api/users/_new.html.erb
+++ b/app/views/api/users/_new.html.erb
@@ -1,6 +1,6 @@
 <form action="/api/users" method="post">
   <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
-	  <span class="error-message">Error message here!</span>
+	  <span class="error-message"></span>
     <input name="user[name]" type="text" placeholder="Name"><br>
     <input name="user[email]" type="text" placeholder="Email"><br>
     <input name="user[password]" type="password" placeholder="Password"><br>
