--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -150,6 +150,10 @@ font-family: 'Quicksand', sans-serif;
 	height: 40px;
 }
 
+.host-pic:hover {
+	opacity: 0.9;
+}
+
 .host-profile {
 	position: relative;
 	top: 15px;
@@ -178,6 +182,10 @@ font-family: 'Quicksand', sans-serif;
   padding-bottom: 20px;
   padding-top: 20px;
 	font-family: 'Quicksand', sans-serif;
+}
+
+.filter-div:hover {
+	background-color: #F7F7F7;//#FBFBFB;//#FFF8F8;
 }
 
 .search-bar.current-filter {
@@ -229,8 +237,8 @@ font-family: 'Quicksand', sans-serif;
 	//border-top: 1px solid #e7e7e7;//#A6A6A6;
 }
 
-.slider {
-//	width: 450px;
+.glyphicon {
+	font-size: 20px;
 }
 
 //########## Map ###########
@@ -258,6 +266,10 @@ font-family: 'Quicksand', sans-serif;
 	padding: 15px;
 	margin-top: -12px;
 	margin-left: 0px;
+}
+
+.meal-div:hover {
+	background-color: #F8F8F8;//#F3F3F4;//#F3F3F7;
 }
 
 .meal-img {
@@ -310,8 +322,20 @@ font-family: 'Quicksand', sans-serif;
 	height: 80px;
 }
 
-.meal-div:hover {
-	opacity: 0.9;
+.new-review-link:hover {
+//	color: #A34775;
+  font-weight: bold;
+}
+
+.guest-div {
+	border: 1px solid #e7e7e7;
+	width: 95px;
+	float: left;
+	overflow: auto;
+	padding-right: 10px;
+	padding-left: 10px;
+	font-size: 15px;
+	text-align: center;
 }
 
 //.btn.btn-default.pink-button:hover {
