map is dragging

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -243,7 +243,7 @@ font-family: 'Quicksand', sans-serif;
 
 //########## Map ###########
 
-#map-canvas {
+#search-map {
 	height: 100vh;
 	margin: 0;
 	padding: 0;
