--- a/app/assets/templates/meals/search.jst.ejs
+++ b/app/assets/templates/meals/search.jst.ejs
@@ -2,7 +2,9 @@
 
 <div class="row" style="margin-top: 50px;">
 	
-	<div class="col-md-5" id="map-canvas">
+	<div class="col-md-5">
+		<div id="search-map">
+		</div>
 	</div>
 	
 	<div class="col-md-7">
