--- a/app/assets/templates/home/home.jst.ejs
+++ b/app/assets/templates/home/home.jst.ejs
@@ -95,7 +95,7 @@
 	
 	<!-- Meal Info Samples -->
 	
-	<div class="row" style="margin-left: 127px;">
+	<div class="row" style="margin-left: 2vw; margin-bottom: 4vh;">
 		
 		<div class="col-md-3 col-md-offset-1 meal-info" style="background-image: url('https://s3-us-west-1.amazonaws.com/yumster/seafood.jpg');">
 			<div class="host-profile">
