--- a/app/assets/templates/meals/show.jst.ejs
+++ b/app/assets/templates/meals/show.jst.ejs
@@ -1,7 +1,7 @@
 <div class="container-fluid" style="margin-top: 50px;">
 <% var host = meal.basicHostData() %>
 	<div class="row" style="font-family: 'Quicksand', sans-serif;">
-		<div class="col-md-6 col-md-offset-1">
+		<div class="col-md-6 col-md-offset-1 meal-content">
 			
 			<div class="row">
 			  <h3 class="meal-header"> <%= meal.get("title") %> </h3>
@@ -47,18 +47,20 @@
 						</div>
 					</div> <!-- individual-rating -->
 				<% }) %>
-				<div class="new-review" style="margin-top: 10px;">
-				</div>
+				<div class="new-review" style="margin-top: 10px;"></div>
 					
 				</div>
 				<!-- <span id="stars"> </span> -->
 			</div> <!-- reviews -->
 			
-		</div> <!-- meal info -->
+		</div>
 		
-		<div class="col-md-4" style="margin-left: 20px;">
+		<div class="col-md-4" style="margin-left: 20px; height: 100vh;">
+			<div style="height: 50px; width: auto;"> </div>
 			
-			<div class="row">
+			<div class="people-info">
+			
+			<div class="row" style="margin-top: -50px;">
 				<h3 class="meal-header" style="background-color: #A34775; color: white;"> Join This Meal </h3>
 				<div class="meal-div">
 					<div class="row" style="margin-left: 0px;">
@@ -115,7 +117,7 @@
 							<img class="host-pic author" src="<%= guest.get('photo_url') %>">
 							<div><%= guest.get("name") %> </div>
 							<div>
-								<span class="glyphicon glyphicon-user"> </span>
+								<span class="glyphicon glyphicon-user" style="font-size: 13px;"> </span>
 								x <%= guest.get("booking").guest_num %>
 							</div>
 						</div>
@@ -123,6 +125,7 @@
 				</div>
 			</div>
 			 
+			</div> <!-- close right side content -->
 		</div> <!-- right side -->
 		
 	</div> <!-- main div -->
