minor style edits

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -360,13 +360,13 @@ font-family: 'Quicksand', sans-serif;
     display: none; 
 }
 
-.people_info {
+.people-info {
 	position: absolute;
 	top: 50px;
-	left: 0;
+	left: 15px;
 	right: 0;
 	bottom: 0;
-	overflow: hidden;
+//	overflow: hidden;
 }
 
 //.btn.btn-default.pink-button:hover {
