--- a/app/assets/templates/meals/show.jst.ejs
+++ b/app/assets/templates/meals/show.jst.ejs
@@ -1,7 +1,8 @@
-<div class="container-fluid" style="margin-top: 50px;">
+<div class="container-fluid">
 <% var host = meal.basicHostData() %>
 	<div class="row" style="font-family: 'Quicksand', sans-serif;">
 		<div class="col-md-6 col-md-offset-1 meal-content">
+			<div style="height: 50px; width: auto;"> </div>
 			
 			<div class="row">
 			  <h3 class="meal-header"> <%= meal.get("title") %> </h3>
@@ -60,7 +61,7 @@
 			
 			<div class="people-info">
 			
-			<div class="row" style="margin-top: -50px;">
+			<div class="row">
 				<h3 class="meal-header" style="background-color: #A34775; color: white;"> Join This Meal </h3>
 				<div class="meal-div">
 					<div class="row" style="margin-left: 0px;">
