--- a/app/assets/templates/home/home.jst.ejs
+++ b/app/assets/templates/home/home.jst.ejs
@@ -101,7 +101,7 @@
 			<div class="host-profile">
 				<img src="https://s3-us-west-1.amazonaws.com/yumster/host1.jpg" class="host-pic">
 				<span style="float: left; margin-left: 5px;">
-					Natasha R's
+					Natasha's
 				</span>
 			</div>
 			<div class="meal-blurb">
@@ -119,7 +119,7 @@
 					<div class="host-profile">
 						<img src="https://s3-us-west-1.amazonaws.com/yumster/host2.jpg" class= "host-pic">
 						<span style="float: left; margin-left: 5px;">
-							Andrei T's
+							Andrei's
 						</span>
 					</div>
 					<div class="meal-blurb">
@@ -138,7 +138,7 @@
 							<div class="host-profile">
 								<img src="https://s3-us-west-1.amazonaws.com/yumster/host3.jpg" class= "host-pic">
 								<span style="float: left; margin-left: 5px;">
-									Marina Z's
+									Marina's
 								</span>
 							</div>
 							<div class="meal-blurb">
