--- a/app/assets/templates/meals/search.jst.ejs
+++ b/app/assets/templates/meals/search.jst.ejs
@@ -127,7 +127,7 @@
 			</div>
 			
 			<!--listings -->
-			<div class="row" style="margin-left: 0.5vw;">
+			<div class="row" style="padding-left: 0.5vw;">
 				<% meals = meals.models %>
 			<% for (var i = 0; i < meals.length; i++) { %>
 				<% host = meals[i].basicHostData() %>
