--- a/app/assets/templates/meals/show.jst.ejs
+++ b/app/assets/templates/meals/show.jst.ejs
@@ -112,7 +112,7 @@
 			
 			<div class="row">
 				<h3 class="meal-header"> Meet the Guests </h3>
-				<div class="meal-div">
+				<div class="meal-div"style="padding-left: 2vw;">
 					<% meal.guests().forEach( function (guest) { %>
 						<div class="guest-div">
 							<img class="host-pic author" src="<%= guest.get('photo_url') %>">
