--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -17,6 +17,8 @@
 				<li class='left-nav-list-item'>
 					<form class='navbar-form navbar-left' id='search-wrapper' role='search'>
 						<div class='form-group'>
+							<input id="header-lat" type="hidden" name="lat">
+							<input id="header-lng" type="hidden" name="lng">
 							<input style="border-radius: 0px; -webkit-appearance: none; width: 230px;" type='text' id='location-header' class='form-control' name='location' placeholder='Location'>
 						</div>
 						<button style="border-radius: 0px; -webkit-appearance: none; margin-left: -4px;" type='submit' id="button-header" class='btn btn-default'>Search</button>
