--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -47,7 +47,7 @@
 //################## Home #####################
 
 body {
-	background-color: #FFF5EB;
+	background-color: white;//#FFF5EB;
 }
 
 #logo {
@@ -189,7 +189,7 @@ font-family: 'Quicksand', sans-serif;
 }
 
 .filter-div:hover {
-	background-color: #FFF7EF;//#FFF9F3;//#F7F7F7;//#FBFBFB;//#FFF8F8;
+	background-color: #FFFEFE;//#FEFDFD;//#FCFBFB;//#F7F7F7;//#FBFBFB;//#FFF8F8;
 }
 
 .search-bar.current-filter {
@@ -236,13 +236,13 @@ font-family: 'Quicksand', sans-serif;
 }
 
 .header-bar {
-	background-color: white;//#E7E7E7;
+	background-color: #F7F7F7;//#E7E7E7;
 	border-bottom: 1px solid #e7e7e7;//#A6A6A6;
 	//border-top: 1px solid #e7e7e7;//#A6A6A6;
 }
 
 .header-bar:hover {
-	background-color: white;
+	background-color: #F7F7F7;
 }
 
 .glyphicon {
@@ -342,10 +342,11 @@ font-family: 'Quicksand', sans-serif;
 }
 
 .guest-div {
-	border: 1px solid #e7e7e7;
+//	border-bottom: 1px solid #e7e7e7;
 	width: 95px;
 	float: left;
 	overflow: auto;
+//	margin-top: 5px;
 	padding-right: 10px;
 	padding-left: 10px;
 	text-align: center;
