can add and remove markers to map/from map

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -189,7 +189,7 @@ font-family: 'Quicksand', sans-serif;
 }
 
 .filter-div:hover {
-	background-color: #FFFEFE;//#FEFDFD;//#FCFBFB;//#F7F7F7;//#FBFBFB;//#FFF8F8;
+//	background-color: #FFFEFE;//#FEFDFD;//#FCFBFB;//#F7F7F7;//#FBFBFB;//#FFF8F8;
 }
 
 .search-bar.current-filter {
