finished search subviews

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -175,7 +175,7 @@ font-family: 'Quicksand', sans-serif;
 
 //################## Search #####################
 
-.search-content {
+#search-content {
 	overflow: auto;
 	height: 100vh;
 }
